# pseudoharmonic-synth

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PseudoHarmonic.icns  README.md  RELEASE_NOTES.md  build_app.ps1  build_app.sh  create_installer.ps1  create_release.ps1  create_release.sh  generate_icons.sh  notarize_app.sh  release_mac.sh  release_win.ps1  sign_app.ps1  sign_app.sh  sign_installer.ps1
Installers/Mac/: make-installer.sh
Installers/Windows/: PseudoHarmonic.iss
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: PseudoHarmonicEngine.cpp  PseudoHarmonicEngine.h  PseudoHarmonicVoice.cpp  PseudoHarmonicVoice.h
Source/Network/: OSCReceiver.cpp  OSCReceiver.h  SimpleWebSocketServer.h  WSBridge.cpp  WSBridge.h
Source/Visualization/: ConsonanceCurve.cpp  ConsonanceCurve.h
cmake/: GenerateTimestamp.cmake
tools/: render_sample.cpp
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/lib/: ConsonancePlot.svelte  Knob.svelte  ws.js
